# pandas-start

./: .gitignore  LICENSE  pyproject.toml
basico/: README.md  pandas_basico.ipynb
projetos/: README.md  gasolina_brasil.ipynb
