[tool.poetry]
name = "pandas-start"
version = "0.1.0"
description = ""
authors = ["jorgemaciel <jorge.maciel.jr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
jupyterlab = "^4.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
